
set(DISTCONV_HAS_CUDA ${CUDA_FOUND})
if (CUDA_FOUND)
  set(DISTCONV_CUDA_VERSION_MAJOR ${CUDA_VERSION_MAJOR})
  set(DISTCONV_CUDA_VERSION_MINOR ${CUDA_VERSION_MINOR})
endif ()

configure_file(
  "${CONFIG_FILE_DIR}/distconv_config.hpp.in"
  "${CMAKE_GENERATED_INCLUDE_DIRECTORY}/distconv_config.hpp"
  @ONLY)

add_subdirectory(include)
add_subdirectory(src)
add_subdirectory(tests)
add_subdirectory(benchmarks)

install(
  TARGETS distconv
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  )

install(
  DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/distconv"
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
  )

install(
  FILES "${CMAKE_GENERATED_INCLUDE_DIRECTORY}/distconv_config.hpp"
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  )