
if (NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release CACHE STRING "CMake build type" FORCE)
endif ()
string(TOUPPER "${CMAKE_BUILD_TYPE}" CMAKE_BUILD_TYPE_UPPER)
if (CMAKE_BUILD_TYPE_UPPER MATCHES DEBUG)
  set(DISTCONV_DEBUG TRUE)
endif ()

set(DISTCONV_HAS_CUDA ${CUDA_FOUND})
if (CUDA_FOUND)
  set(DISTCONV_HAS_CUDA ${CUDA_FOUND})
  set(DISTCONV_CUDA_VERSION_MAJOR ${CUDA_VERSION_MAJOR})
  set(DISTCONV_CUDA_VERSION_MINOR ${CUDA_VERSION_MINOR})
  set(DISTCONV_HAS_CUDNN ${cuDNN_FOUND})
  set(DISTCONV_HAS_P2P ${P2P_FOUND})
  set(DISTCONV_HAS_NVSHMEM ${NVSHMEM_FOUND})
endif ()

option(DISTCONV_OPTIMIZE_FIND_DESTINATION
  "Enable optimization of find_destination."
  ON)

configure_file(
  "${CONFIG_FILE_DIR}/distconv_config.hpp.in"
  "${CMAKE_GENERATED_INCLUDE_DIRECTORY}/distconv_config.hpp"
  @ONLY)

add_subdirectory(include)
add_subdirectory(src)
add_subdirectory(tests)
add_subdirectory(benchmarks)

install(
  TARGETS distconv
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  )

install(
  DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/distconv"
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
  )

install(
  FILES "${CMAKE_GENERATED_INCLUDE_DIRECTORY}/distconv_config.hpp"
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  )
